bug 975750 - remove httpdatausage r=jduell